--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "local": "./node_modules/.bin/nodemon -L --ignore public/",
-    "db:reset": "node bin/resetdb.js"
+    "db:reset": "node bin/resetdb.js",
+    "dev": "nodemon server.js"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "chalk": "^2.4.2",
+    "cors": "^2.8.5",
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-async-handler": "^1.2.0",
     "morgan": "^1.9.1",
-    "pg": "^8.5.0",
+    "pg": "^8.8.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
