--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.2.2",
     "chalk": "^2.4.2",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "dotenv": "^2.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
+    "framer-motion": "^7.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.8.0",
+    "react-bootstrap": "^2.5.0",
     "sass": "^1.35.1"
   },
   "devDependencies": {
