--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-handler": "^1.2.0",
     "framer-motion": "^7.5.1",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.2",
     "pg": "^8.8.0",
     "react-bootstrap": "^2.5.0",
     "sass": "^1.35.1"
