--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "morgan": "^1.9.1",
     "pg": "^8.8.0",
     "react-bootstrap": "^2.5.0",
+    "react-confetti": "^6.1.0",
+    "react-rewards": "^2.0.4",
     "sass": "^1.35.1"
   },
   "devDependencies": {
